// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImportContractModal.vue Should let the user import a non verified mainnet contract 1`] = `
<div role="dialog" class="v-dialog__container">
  <transition-stub name="dialog-transition">
    <div role="document" tabindex="0" class="v-dialog__content v-dialog__content--active" style="z-index: 202;">
      <div class="v-dialog v-dialog--active" style="max-width: 600px;">
        <div class="v-card v-sheet theme--light">
          <div class="v-card__title headline">Import a third-party contract</div>
          <div class="v-card__text">
            <!---->
            <div role="alert" class="v-alert v-sheet theme--dark success">Contract has been imported at address <a class="white--text" href="/address/0x123">0x123</a>. If available, metadata will be automatically imported from Etherscan in a few seconds...</div>
            <!---->
            <div>
              Enter an address of a contract deployed on Ethereum mainnet.<br>
              If the contract has been verified on Etherscan, its name and ABI will be pulled automatically.<br>
              If not, the contract will be imported but you'll have to manually add the name and ABI.
              To be able to use this, your workspace needs to be connected to a mainnet fork.<br>
              If it is not, the contract will still be imported but calls will fail.<br></div>
            <div class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <div class="v-text-field__slot"><label for="contractAddress" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">Address*</label><input required="required" id="contractAddress" type="text"></div>
                </div>
                <div class="v-text-field__details">
                  <div class="v-messages theme--light">
                    <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div class="v-card__actions">
            <div class="spacer"></div> <button type="button" class="v-btn v-btn--flat v-btn--text theme--light v-size--default primary--text"><span class="v-btn__content">Close</span></button> <button type="button" class="v-btn v-btn--flat v-btn--text theme--light v-size--default primary--text" id="importContract"><span class="v-btn__content">Import</span></button>
          </div>
        </div>
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`ImportContractModal.vue Should let the user import a verified mainnet contract 1`] = `
<div role="dialog" class="v-dialog__container">
  <transition-stub name="dialog-transition">
    <div role="document" tabindex="0" class="v-dialog__content v-dialog__content--active" style="z-index: 202;">
      <div class="v-dialog v-dialog--active" style="max-width: 600px;">
        <div class="v-card v-sheet theme--light">
          <div class="v-card__title headline">Import a third-party contract</div>
          <div class="v-card__text">
            <!---->
            <div role="alert" class="v-alert v-sheet theme--dark success">Contract has been imported at address <a class="white--text" href="/address/0x123">0x123</a>. If available, metadata will be automatically imported from Etherscan in a few seconds...</div>
            <!---->
            <div>
              Enter an address of a contract deployed on Ethereum mainnet.<br>
              If the contract has been verified on Etherscan, its name and ABI will be pulled automatically.<br>
              If not, the contract will be imported but you'll have to manually add the name and ABI.
              To be able to use this, your workspace needs to be connected to a mainnet fork.<br>
              If it is not, the contract will still be imported but calls will fail.<br></div>
            <div class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <div class="v-text-field__slot"><label for="contractAddress" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">Address*</label><input required="required" id="contractAddress" type="text"></div>
                </div>
                <div class="v-text-field__details">
                  <div class="v-messages theme--light">
                    <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div class="v-card__actions">
            <div class="spacer"></div> <button type="button" class="v-btn v-btn--flat v-btn--text theme--light v-size--default primary--text"><span class="v-btn__content">Close</span></button> <button type="button" class="v-btn v-btn--flat v-btn--text theme--light v-size--default primary--text" id="importContract"><span class="v-btn__content">Import</span></button>
          </div>
        </div>
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`ImportContractModal.vue Should not warn the user if he is on a premium plan and has already 10 contracts 1`] = `
<div role="dialog" class="v-dialog__container">
  <transition-stub name="dialog-transition">
    <div role="document" tabindex="0" class="v-dialog__content v-dialog__content--active" style="z-index: 202;">
      <div class="v-dialog v-dialog--active" style="max-width: 600px;">
        <div class="v-card v-sheet theme--light">
          <div class="v-card__title headline">Import a third-party contract</div>
          <div class="v-card__text">
            <!---->
            <div role="alert" class="v-alert v-sheet theme--dark success">Contract has been imported at address <a class="white--text" href="/address/0x123">0x123</a>. If available, metadata will be automatically imported from Etherscan in a few seconds...</div>
            <!---->
            <div>
              Enter an address of a contract deployed on Ethereum mainnet.<br>
              If the contract has been verified on Etherscan, its name and ABI will be pulled automatically.<br>
              If not, the contract will be imported but you'll have to manually add the name and ABI.
              To be able to use this, your workspace needs to be connected to a mainnet fork.<br>
              If it is not, the contract will still be imported but calls will fail.<br></div>
            <div class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <div class="v-text-field__slot"><label for="contractAddress" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">Address*</label><input required="required" id="contractAddress" type="text"></div>
                </div>
                <div class="v-text-field__details">
                  <div class="v-messages theme--light">
                    <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div class="v-card__actions">
            <div class="spacer"></div> <button type="button" class="v-btn v-btn--flat v-btn--text theme--light v-size--default primary--text"><span class="v-btn__content">Close</span></button> <button type="button" class="v-btn v-btn--flat v-btn--text theme--light v-size--default primary--text" id="importContract"><span class="v-btn__content">Import</span></button>
          </div>
        </div>
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`ImportContractModal.vue Should warn the user if he is on a free plan and has already 10 contracts 1`] = `
<div role="dialog" class="v-dialog__container">
  <transition-stub name="dialog-transition">
    <div role="document" tabindex="0" class="v-dialog__content v-dialog__content--active" style="z-index: 202;">
      <div class="v-dialog v-dialog--active" style="max-width: 600px;">
        <div class="v-card v-sheet theme--light">
          <div class="v-card__title headline">Import a third-party contract</div>
          <div class="v-card__text">
            <div role="alert" class="v-alert v-sheet theme--dark v-alert--text error--text">
              <div class="v-alert__wrapper"><i aria-hidden="true" class="v-icon notranslate v-alert__icon mdi mdi-alert theme--dark error--text"></i>
                <div class="v-alert__content">Free plan users are limited to 10 synced contracts. Remove some contracts or <a>upgrade</a> to the Premium plan for more.</div>
              </div>
            </div>
            <!---->
            <!---->
            <div>
              Enter an address of a contract deployed on Ethereum mainnet.<br>
              If the contract has been verified on Etherscan, its name and ABI will be pulled automatically.<br>
              If not, the contract will be imported but you'll have to manually add the name and ABI.
              To be able to use this, your workspace needs to be connected to a mainnet fork.<br>
              If it is not, the contract will still be imported but calls will fail.<br></div>
            <div class="v-input v-input--is-disabled theme--light v-text-field">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <div class="v-text-field__slot"><label for="contractAddress" class="v-label v-label--is-disabled theme--light" style="left: 0px; position: absolute;">Address*</label><input required="required" disabled="disabled" id="contractAddress" type="text"></div>
                </div>
                <div class="v-text-field__details">
                  <div class="v-messages theme--light">
                    <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div class="v-card__actions">
            <div class="spacer"></div> <button type="button" class="v-btn v-btn--flat v-btn--text theme--light v-size--default primary--text"><span class="v-btn__content">Close</span></button> <button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--flat v-btn--text theme--light v-size--default" id="importContract"><span class="v-btn__content">Import</span></button>
          </div>
        </div>
      </div>
    </div>
  </transition-stub>
</div>
`;
